# EndtoEnd_data-analysis-coordinator

./: README.md  pyproject.toml  render.yaml  requirements.txt
src/: main.py
src/front/: app.py
src/utilies/ia/: agente.py  config.py  db.py  models.py  repository.py  schema.py
